# econ2026-de

./: .gitignore  .nojekyll  00-Hausarbeit.html  00-Hausarbeit.qmd  01-Deskriptive-Statistik-Class.ipynb  01-Deskriptive-Statistik.ipynb  02-Deskriptive-Statistik.html  02-Deskriptive-Statistik.ipynb  02-Statistik-Wiederholung-Class.ipynb  03-1-Least-Squares-Class.ipynb  03-KQ-Methode.html  03-KQ-Methode.ipynb  04a-Diskrete-Verteilungen.html  04a-Diskrete-Verteilungen.ipynb  04b-Stetige-Verteilungen.html  04b-Stetige-Verteilungen.ipynb  05-Einweg-Varianzanalyse.html  05-Einweg-Varianzanalyse.ipynb  06-Multiple-Regression-Paradoxes.ipynb  06-Multiples-Regressionsmodell.html  06-Multiples-Regressionsmodell.ipynb  06-Simulation-Class.ipynb  07-NL.html  07-NL.ipynb  08-Interaction-Effects.html  08-Interaction-Effects.ipynb  09-Categorical-Variables.ipynb  10-Interaction.ipynb  Literature.html  Literature.qmd  _quarto.yml  _variables.yml  environment.yml  examples.bib  index.html  index.qmd  pyproject.toml  references.html  search.json  tmp.ipynb
01-Python/: 01-01-Basics.html  01-01-Basics.ipynb  01-02-Basics-Ex.html  01-02-Basics-Ex.ipynb  01-03-Numpy.html  01-03-Numpy.ipynb  01-04-Pandas.html  01-04-Pandas.ipynb  01-05-Pandas-Ex.html  index.qmd
02-Review/: 01-Descriptive-Statistics.ipynb  02-Probability.ipynb  03-Normal-Distribution.ipynb
03-Simple-Regression/: 01-Continuos-Predictor.ipynb  02-One-Way-ANOVA.ipynb
06-Interactions/: kids.ipynb
Appendices/: 01-Wahrscheinlichkeit.ipynb  02-Random-Variables.ipynb  03-Die-Normalverteilung.ipynb  04-LA.ipynb  (+1 more)
(+7 files in other folders)
